--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <section>
-    <h1>Queen of the Black Coast</h1>
+    <h1 class="yotta">Queen of the Black Coast</h1>
     <h2>By Robert E. Howard, 1934</h2>
     <h3>1. Conan Joins the Pirates<h3>
     <p>Believe green buds awaken in the spring,
